<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical"
    tools:context=".view.HomeFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <com.google.android.material.button.MaterialButton
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_xs"
            android:text="@string/moscow"
            app:icon="@drawable/ic_keyboard_arrow_down_24" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/margin_xs"
            app:icon="@drawable/ic_qr_code_24"
            app:iconTint="@color/content_color_variant"
            tools:ignore="SpeakableTextPresentCheck" />
    </FrameLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/appbar_height"
            android:background="@color/main_bg"
            android:fitsSystemWindows="true"
            app:expanded="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:layout_scrollInterpolator="@android:anim/accelerate_decelerate_interpolator"
                app:toolbarId="@id/toolbar">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/banners_list"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/banner_height"
                    android:layout_marginTop="@dimen/margin_m"
                    app:layout_collapseMode="parallax" />


                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/toolbar_height"
                    android:layout_gravity="bottom"
                    android:background="@color/main_bg"
                    app:contentInsetStart="0dp"
                    app:layout_collapseMode="pin">

                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/products_category"
                        style="@style/CategorySelector"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_s"
                        android:background="@android:color/transparent"
                        app:layout_collapseMode="pin"
                        app:tabMode="scrollable">

                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/pizza" />

                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/combo" />

                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/deserts" />

                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/drinks" />

                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/snacks" />
                    </com.google.android.material.tabs.TabLayout>
                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.CollapsingToolbarLayout>


        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/products_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/product" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.appcompat.widget.LinearLayoutCompat>